{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 22,
  "lineage": "44ccb2b4-c594-7888-3195-7adb2f047d8c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "kiunsen-nat-ip",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08e4890d10efff753",
            "public_dns": "ec2-99-80-61-23.eu-west-1.compute.amazonaws.com",
            "public_ip": "99.80.61.23",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db-server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dad359ff462124ca",
            "arn": "arn:aws:ec2:eu-west-1:743841807458:instance/i-063905cdd285c9c9a",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-063905cdd285c9c9a",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0848379c409419aef",
            "private_dns": "ip-10-10-4-163.eu-west-1.compute.internal",
            "private_ip": "10.10.4.163",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0332472713f5743f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e0ce97a74a3c9350",
            "tags": {
              "Name": "db-1-v:0.1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-013be581cdc63789c"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_security_group.allow-mysql",
            "aws_subnet.kiunsen-private",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dad359ff462124ca",
            "arn": "arn:aws:ec2:eu-west-1:743841807458:instance/i-09699f75573730565",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09699f75573730565",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07634645e5daa4946",
            "private_dns": "ip-10-10-1-14.eu-west-1.compute.internal",
            "private_ip": "10.10.1.14",
            "public_dns": "ec2-18-203-153-204.eu-west-1.compute.amazonaws.com",
            "public_ip": "18.203.153.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06dcb482133d19db8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d3d3ea6db239d1b0",
            "tags": {
              "Name": "web-1-v:0.1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000bfade1d0aab6e3"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dad359ff462124ca",
            "arn": "arn:aws:ec2:eu-west-1:743841807458:instance/i-05f8475415fdb9680",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f8475415fdb9680",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0c9cf0d1935c0a10b",
            "private_dns": "ip-10-10-2-205.eu-west-1.compute.internal",
            "private_ip": "10.10.2.205",
            "public_dns": "ec2-34-241-222-241.eu-west-1.compute.amazonaws.com",
            "public_ip": "34.241.222.241",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-00b548cd7bfef7269",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f78bd09422cd749b",
            "tags": {
              "Name": "web-2-v:0.1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000bfade1d0aab6e3"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0dad359ff462124ca",
            "arn": "arn:aws:ec2:eu-west-1:743841807458:instance/i-012cc8990a94ad030",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-012cc8990a94ad030",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "public_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00ad47ef7ccca0b97",
            "private_dns": "ip-10-10-3-180.eu-west-1.compute.internal",
            "private_ip": "10.10.3.180",
            "public_dns": "ec2-54-246-248-128.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.246.248.128",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-08c5218cc2eae1640",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03861d4740c44716e",
            "tags": {
              "Name": "web-3-v:0.1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-000bfade1d0aab6e3"
            ]
          },
          "dependencies": [
            "aws_key_pair.public_key",
            "aws_security_group.allow-ssh-http",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "kiunsen-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-049b854cc9b8e8267",
            "owner_id": "743841807458",
            "tags": {
              "Name": "kiunsen-gw"
            },
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "kiunsen-nat-gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08e4890d10efff753",
            "id": "nat-033075f6fcf7fafb9",
            "network_interface_id": "eni-0cfea32ed85299e3a",
            "private_ip": "10.10.1.125",
            "public_ip": "99.80.61.23",
            "subnet_id": "subnet-0d3d3ea6db239d1b0"
          },
          "dependencies": [
            "aws_eip.kiunsen-nat-ip",
            "aws_internet_gateway.kiunsen-gw",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kiunsen-private-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0265bc7ca97fdfbe3",
            "owner_id": "743841807458",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-033075f6fcf7fafb9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kiunsen-private-route"
            },
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_eip.kiunsen-nat-ip",
            "aws_internet_gateway.kiunsen-gw",
            "aws_nat_gateway.kiunsen-nat-gw",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "kiunsen-public-route",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0e821ab3f590a1393",
            "owner_id": "743841807458",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-049b854cc9b8e8267",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "kiunsen-public-route"
            },
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_internet_gateway.kiunsen-gw",
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kiunsen-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e51860fa251d06",
            "route_table_id": "rtb-0265bc7ca97fdfbe3",
            "subnet_id": "subnet-0e0ce97a74a3c9350"
          },
          "dependencies": [
            "aws_eip.kiunsen-nat-ip",
            "aws_internet_gateway.kiunsen-gw",
            "aws_nat_gateway.kiunsen-nat-gw",
            "aws_route_table.kiunsen-private-route",
            "aws_subnet.kiunsen-private",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "kiunsen-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d7e18cc356ce2d2",
            "route_table_id": "rtb-0e821ab3f590a1393",
            "subnet_id": "subnet-0d3d3ea6db239d1b0"
          },
          "dependencies": [
            "aws_internet_gateway.kiunsen-gw",
            "aws_route_table.kiunsen-public-route",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00b80e0ae5ce339b4",
            "route_table_id": "rtb-0e821ab3f590a1393",
            "subnet_id": "subnet-0f78bd09422cd749b"
          },
          "dependencies": [
            "aws_internet_gateway.kiunsen-gw",
            "aws_route_table.kiunsen-public-route",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1a47505c3a35f0f",
            "route_table_id": "rtb-0e821ab3f590a1393",
            "subnet_id": "subnet-03861d4740c44716e"
          },
          "dependencies": [
            "aws_internet_gateway.kiunsen-gw",
            "aws_route_table.kiunsen-public-route",
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-mysql",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:743841807458:security-group/sg-013be581cdc63789c",
            "description": "security group that allows mysql port and public-zone egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013be581cdc63789c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.1.0/24",
                  "10.10.2.0/24",
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.10.1.0/24",
                  "10.10.2.0/24",
                  "10.10.3.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "allow-mysql",
            "name_prefix": null,
            "owner_id": "743841807458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-mysql"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_subnet.kiunsen-public",
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow-ssh-http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:743841807458:security-group/sg-000bfade1d0aab6e3",
            "description": "security group that allows ssh, http and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-000bfade1d0aab6e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow-ssh-http",
            "name_prefix": null,
            "owner_id": "743841807458",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-ssh-http"
            },
            "timeouts": null,
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kiunsen-private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:743841807458:subnet/subnet-0e0ce97a74a3c9350",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-0e0ce97a74a3c9350",
            "map_public_ip_on_launch": false,
            "owner_id": "743841807458",
            "tags": {
              "Name": "kiunsen-private"
            },
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "kiunsen-public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:743841807458:subnet/subnet-0d3d3ea6db239d1b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0d3d3ea6db239d1b0",
            "map_public_ip_on_launch": true,
            "owner_id": "743841807458",
            "tags": {
              "Name": "kiunsen-public"
            },
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_vpc.kiunsen-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:743841807458:subnet/subnet-0f78bd09422cd749b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-0f78bd09422cd749b",
            "map_public_ip_on_launch": true,
            "owner_id": "743841807458",
            "tags": {
              "Name": "kiunsen-public"
            },
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_vpc.kiunsen-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:743841807458:subnet/subnet-03861d4740c44716e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-03861d4740c44716e",
            "map_public_ip_on_launch": true,
            "owner_id": "743841807458",
            "tags": {
              "Name": "kiunsen-public"
            },
            "vpc_id": "vpc-05b34e5f6e7f12222"
          },
          "dependencies": [
            "aws_vpc.kiunsen-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kiunsen-vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:743841807458:vpc/vpc-05b34e5f6e7f12222",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-09beca0f51cd91a8c",
            "default_route_table_id": "rtb-0b0d70a40b7ab2c6b",
            "default_security_group_id": "sg-0338e9a559b0199c7",
            "dhcp_options_id": "dopt-0c54c838e1f59d070",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05b34e5f6e7f12222",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0b0d70a40b7ab2c6b",
            "owner_id": "743841807458",
            "tags": {
              "Name": "kiunsen-vpc"
            }
          }
        }
      ]
    }
  ]
}